[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
atoi = "2.0.0"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
opentelemetry = { version = "0.20.0", optional = true }
opentelemetry-aws = { version = "0.8.0", optional = true }
opentelemetry-otlp = { version = "0.13.0", optional = true }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.21.0", optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["test-util"] }

[features]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-aws", "dep:opentelemetry-otlp"]